// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`basic 1`] = `
{
  "importStrings": [
    "import locale__test_srcDir_en_json from "../srcDir/en.json";",
    "import locale__test_srcDir_ja_json from "../srcDir/ja.json";",
    "import locale__test_srcDir_fr_json from "../srcDir/fr.json";",
  ],
  "localeLoaders": [
    [
      "en",
      [
        {
          "cache": "true",
          "key": ""../srcDir/en.json"",
          "load": "() => Promise.resolve(locale__test_srcDir_en_json)",
        },
      ],
    ],
    [
      "ja",
      [
        {
          "cache": "true",
          "key": ""../srcDir/ja.json"",
          "load": "() => Promise.resolve(locale__test_srcDir_ja_json)",
        },
      ],
    ],
    [
      "fr",
      [
        {
          "cache": "true",
          "key": ""../srcDir/fr.json"",
          "load": "() => Promise.resolve(locale__test_srcDir_fr_json)",
        },
      ],
    ],
  ],
  "nuxtI18nOptions": {
    "defaultLocale": "en",
    "lazy": false,
    "locales": [],
  },
  "vueI18nConfigs": [
    "() => import("../i18n.config.ts?hash=bffaebcb&config=1" /* webpackChunkName: "i18n_config_ts_bffaebcb" */)",
  ],
}
`;

exports[`files with cache configuration 1`] = `
{
  "importStrings": [],
  "localeLoaders": [
    [
      "en",
      [
        {
          "cache": "true",
          "key": ""../srcDir/en.json"",
          "load": "() => import("../srcDir/en.json" /* webpackChunkName: "locale__test_srcDir_en_json" */)",
        },
      ],
    ],
    [
      "ja",
      [
        {
          "cache": "true",
          "key": ""../srcDir/ja.json"",
          "load": "() => import("../srcDir/ja.json" /* webpackChunkName: "locale__test_srcDir_ja_json" */)",
        },
      ],
    ],
    [
      "fr",
      [
        {
          "cache": "true",
          "key": ""../srcDir/fr.json"",
          "load": "() => import("../srcDir/fr.json" /* webpackChunkName: "locale__test_srcDir_fr_json" */)",
        },
      ],
    ],
    [
      "es",
      [
        {
          "cache": "false",
          "key": ""../srcDir/es.json"",
          "load": "() => import("../srcDir/es.json" /* webpackChunkName: "locale__test_srcDir_es_json" */)",
        },
      ],
    ],
    [
      "es-AR",
      [
        {
          "cache": "false",
          "key": ""../srcDir/es.json"",
          "load": "() => import("../srcDir/es.json" /* webpackChunkName: "locale__test_srcDir_es_json" */)",
        },
        {
          "cache": "true",
          "key": ""../srcDir/es-AR.json"",
          "load": "() => import("../srcDir/es-AR.json" /* webpackChunkName: "locale__test_srcDir_es_AR_json" */)",
        },
      ],
    ],
  ],
  "nuxtI18nOptions": {
    "defaultLocale": "en",
    "lazy": true,
    "locales": [],
  },
  "vueI18nConfigs": [
    "() => import("../i18n.config.ts?hash=bffaebcb&config=1" /* webpackChunkName: "i18n_config_ts_bffaebcb" */)",
  ],
}
`;

exports[`lazy 1`] = `
{
  "importStrings": [],
  "localeLoaders": [
    [
      "en",
      [
        {
          "cache": "true",
          "key": ""../srcDir/en.json"",
          "load": "() => import("../srcDir/en.json" /* webpackChunkName: "locale__test_srcDir_en_json" */)",
        },
      ],
    ],
    [
      "ja",
      [
        {
          "cache": "true",
          "key": ""../srcDir/ja.json"",
          "load": "() => import("../srcDir/ja.json" /* webpackChunkName: "locale__test_srcDir_ja_json" */)",
        },
      ],
    ],
    [
      "fr",
      [
        {
          "cache": "true",
          "key": ""../srcDir/fr.json"",
          "load": "() => import("../srcDir/fr.json" /* webpackChunkName: "locale__test_srcDir_fr_json" */)",
        },
      ],
    ],
  ],
  "nuxtI18nOptions": {
    "defaultLocale": "en",
    "lazy": true,
    "locales": [],
  },
  "vueI18nConfigs": [
    "() => import("../i18n.config.ts?hash=bffaebcb&config=1" /* webpackChunkName: "i18n_config_ts_bffaebcb" */)",
  ],
}
`;

exports[`locale file in nested 1`] = `
{
  "importStrings": [],
  "localeLoaders": [
    [
      "en",
      [
        {
          "cache": "true",
          "key": ""../srcDir/en/main.json"",
          "load": "() => import("../srcDir/en/main.json" /* webpackChunkName: "locale__test_srcDir_en_main_json" */)",
        },
      ],
    ],
    [
      "ja",
      [
        {
          "cache": "true",
          "key": ""../srcDir/ja/main.json"",
          "load": "() => import("../srcDir/ja/main.json" /* webpackChunkName: "locale__test_srcDir_ja_main_json" */)",
        },
      ],
    ],
    [
      "fr",
      [
        {
          "cache": "true",
          "key": ""../srcDir/fr/main.json"",
          "load": "() => import("../srcDir/fr/main.json" /* webpackChunkName: "locale__test_srcDir_fr_main_json" */)",
        },
      ],
    ],
  ],
  "nuxtI18nOptions": {
    "defaultLocale": "en",
    "lazy": true,
    "locales": [],
  },
  "vueI18nConfigs": [
    "() => import("../i18n.config.ts?hash=bffaebcb&config=1" /* webpackChunkName: "i18n_config_ts_bffaebcb" */)",
  ],
}
`;

exports[`multiple files 1`] = `
{
  "importStrings": [],
  "localeLoaders": [
    [
      "en",
      [
        {
          "cache": "true",
          "key": ""../srcDir/en.json"",
          "load": "() => import("../srcDir/en.json" /* webpackChunkName: "locale__test_srcDir_en_json" */)",
        },
      ],
    ],
    [
      "ja",
      [
        {
          "cache": "true",
          "key": ""../srcDir/ja.json"",
          "load": "() => import("../srcDir/ja.json" /* webpackChunkName: "locale__test_srcDir_ja_json" */)",
        },
      ],
    ],
    [
      "fr",
      [
        {
          "cache": "true",
          "key": ""../srcDir/fr.json"",
          "load": "() => import("../srcDir/fr.json" /* webpackChunkName: "locale__test_srcDir_fr_json" */)",
        },
      ],
    ],
    [
      "es",
      [
        {
          "cache": "true",
          "key": ""../srcDir/es.json"",
          "load": "() => import("../srcDir/es.json" /* webpackChunkName: "locale__test_srcDir_es_json" */)",
        },
      ],
    ],
    [
      "es-AR",
      [
        {
          "cache": "true",
          "key": ""../srcDir/es.json"",
          "load": "() => import("../srcDir/es.json" /* webpackChunkName: "locale__test_srcDir_es_json" */)",
        },
        {
          "cache": "true",
          "key": ""../srcDir/es-AR.json"",
          "load": "() => import("../srcDir/es-AR.json" /* webpackChunkName: "locale__test_srcDir_es_AR_json" */)",
        },
      ],
    ],
  ],
  "nuxtI18nOptions": {
    "defaultLocale": "en",
    "lazy": true,
    "locales": [],
  },
  "vueI18nConfigs": [
    "() => import("../i18n.config.ts?hash=bffaebcb&config=1" /* webpackChunkName: "i18n_config_ts_bffaebcb" */)",
  ],
}
`;

exports[`toCode: function (arrow) 1`] = `
{
  "importStrings": [],
  "localeLoaders": [],
  "nuxtI18nOptions": {
    "defaultLocale": "en",
    "lazy": false,
    "locales": [
      {
        "code": "en",
        "files": [
          "en.json",
        ],
        "paths": [
          "/path/to/en.json",
        ],
        "testFunc": [Function],
      },
      {
        "code": "ja",
        "files": [
          "ja.json",
        ],
        "paths": [
          "/path/to/ja.json",
        ],
        "testFunc": [Function],
      },
      {
        "code": "fr",
        "files": [
          "fr.json",
        ],
        "paths": [
          "/path/to/fr.json",
        ],
        "testFunc": [Function],
      },
    ],
  },
  "vueI18nConfigs": [
    "() => import("../i18n.config.ts?hash=bffaebcb&config=1" /* webpackChunkName: "i18n_config_ts_bffaebcb" */)",
  ],
}
`;

exports[`toCode: function (named) 1`] = `
{
  "importStrings": [],
  "localeLoaders": [],
  "nuxtI18nOptions": {
    "defaultLocale": "en",
    "lazy": false,
    "locales": [
      {
        "code": "en",
        "files": [
          "en.json",
        ],
        "paths": [
          "/path/to/en.json",
        ],
        "testFunc": [Function],
      },
      {
        "code": "ja",
        "files": [
          "ja.json",
        ],
        "paths": [
          "/path/to/ja.json",
        ],
        "testFunc": [Function],
      },
      {
        "code": "fr",
        "files": [
          "fr.json",
        ],
        "paths": [
          "/path/to/fr.json",
        ],
        "testFunc": [Function],
      },
    ],
  },
  "vueI18nConfigs": [
    "() => import("../i18n.config.ts?hash=bffaebcb&config=1" /* webpackChunkName: "i18n_config_ts_bffaebcb" */)",
  ],
}
`;

exports[`vueI18n option 1`] = `
{
  "importStrings": [
    "import locale__test_srcDir_en_json from "../srcDir/en.json";",
    "import locale__test_srcDir_ja_json from "../srcDir/ja.json";",
    "import locale__test_srcDir_fr_json from "../srcDir/fr.json";",
  ],
  "localeLoaders": [
    [
      "en",
      [
        {
          "cache": "true",
          "key": ""../srcDir/en.json"",
          "load": "() => Promise.resolve(locale__test_srcDir_en_json)",
        },
      ],
    ],
    [
      "ja",
      [
        {
          "cache": "true",
          "key": ""../srcDir/ja.json"",
          "load": "() => Promise.resolve(locale__test_srcDir_ja_json)",
        },
      ],
    ],
    [
      "fr",
      [
        {
          "cache": "true",
          "key": ""../srcDir/fr.json"",
          "load": "() => Promise.resolve(locale__test_srcDir_fr_json)",
        },
      ],
    ],
  ],
  "nuxtI18nOptions": {
    "lazy": false,
    "locales": [],
    "vueI18n": "vue-i18n.config.ts",
  },
  "vueI18nConfigs": [
    "() => import("../foo/layer2/vue-i18n.options.js?hash=475488e5&config=1" /* webpackChunkName: "vue_i18n_options_js_475488e5" */)",
    "() => import("../layer1/i18n.custom.ts?hash=0ca697e2&config=1" /* webpackChunkName: "i18n_custom_ts_0ca697e2" */)",
    "() => import("../to/i18n.config.ts?hash=fb1304e8&config=1" /* webpackChunkName: "i18n_config_ts_fb1304e8" */)",
  ],
}
`;
